--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,9 @@
-#игнорирование pycache везде
+# игнорирование pycache везде
 **/__pycache__/
 
 #игнорирование model в корне
 #/model
 
-#игнор настроек редакторов
+# игнорирование настроек редакторов
 /.vscode
 /.idea
